[gd_scene load_steps=11 format=3 uid="uid://brm420k3ceef4"]

[ext_resource type="Script" uid="uid://bbg3lodsqkn87" path="res://Scenes/Games/Zelda/enemies/ZeldaEnemy3.gd" id="1_0t71a"]
[ext_resource type="Texture2D" uid="uid://ci7awt5dj3p1w" path="res://GFX/Zoria Tileset/player.png" id="2_nv7ps"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bv21s"]
atlas = ExtResource("2_nv7ps")
region = Rect2(360, 324, 144, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bv21s"]
size = Vector2(24, 28)

[sub_resource type="Animation" id="Animation_dy33w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_1d37h"]
resource_name = "walk"
length = 0.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_0t71a"]
resource_name = "walk"
length = 0.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_nv7ps"]
resource_name = "walk"
length = 0.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_sstgd"]
resource_name = "walk"
length = 0.66667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fu4o5"]
_data = {
&"RESET": SubResource("Animation_dy33w"),
&"walk_down": SubResource("Animation_1d37h"),
&"walk_left": SubResource("Animation_sstgd"),
&"walk_right": SubResource("Animation_0t71a"),
&"walk_up": SubResource("Animation_nv7ps")
}

[node name="ZeldaEnemy3" type="CharacterBody2D"]
collision_layer = 262
collision_mask = 262
script = ExtResource("1_0t71a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_bv21s")
hframes = 4
vframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bv21s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fu4o5")
}

[node name="UpWallCast" type="RayCast2D" parent="."]
position = Vector2(-12, -14)
target_position = Vector2(0, -4)
collision_mask = 2

[node name="UpWallCast2" type="RayCast2D" parent="."]
position = Vector2(12, -14)
target_position = Vector2(0, -4)
collision_mask = 2

[node name="DownWallCast" type="RayCast2D" parent="."]
position = Vector2(-12, 14)
target_position = Vector2(0, 4)
collision_mask = 2

[node name="DownWallCast2" type="RayCast2D" parent="."]
position = Vector2(12, 14)
target_position = Vector2(0, 4)
collision_mask = 2

[node name="LeftWallCast" type="RayCast2D" parent="."]
position = Vector2(-12, -14)
target_position = Vector2(-4, 0)
collision_mask = 2

[node name="LeftWallCast2" type="RayCast2D" parent="."]
position = Vector2(-12, 14)
target_position = Vector2(-4, 0)
collision_mask = 2

[node name="RightWallCast" type="RayCast2D" parent="."]
position = Vector2(12, -14)
target_position = Vector2(4, 0)
collision_mask = 2

[node name="RightWallCast2" type="RayCast2D" parent="."]
position = Vector2(12, 14)
target_position = Vector2(4, 0)
collision_mask = 2
